# mptorch

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  api.html  examples.html  genindex.html  index.html  mptorch_mlp.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  trainer.py  tutorial.html  usage.html
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree  tutorial.doctree  usage.doctree
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt
background/: arrival-and-computers.md  arrival.md  biblio.md  computers.md  contact-info.txt  how-to-connect.md  sudo.md
experiments/: Makefile  MatrixMultiply  MatrixMultiply.cpp  median.csv
experiments_tests/: Makefile  Stochastic_test  Stochastic_test.cpp  stochastic_test.csv  test2.ipynb
mptorch/: __init__.py  number.py
tests/: conftest.py  markers.py  quant.py  test_bfloat16_nearest.py  test_binary8_nearest.py  test_binary8_signed_nearest.py  test_binary8_stochastic.py  test_binary8_truncate.py  test_binary8_unsigned_nearest.py  test_cublas.py  test_float_quantize.py  test_gelu.py  test_is_fp.py  test_mm.py  test_mm_compensated.py  test_p3109_nearest.py  test_p3109_stochastic.py  test_p3109_troncate.py  test_p3109_unsigned_nearest.py  test_qbatchnorm1d.py  test_qbatchnorm2d.py  test_qconv1d.py  test_qconv2d.py  test_qconv3d.py  test_qconvtranspose1d.py  test_qconvtranspose2d.py  test_qconvtranspose3d.py  test_qgelu.py  test_qlayernorm.py  test_qlinear.py  test_qsoftmax.py  test_quantization.py  (+3 more)
(+172 files in other folders)
